--- a/sakkada/admin/fkey_list/_install/templates/admin/app_name/object_history.html
+++ b/sakkada/admin/fkey_list/_install/templates/admin/app_name/object_history.html
@@ -3,16 +3,16 @@
 
 {% block content_title %}
 {{ block.super }}
-{% if request.FKEY_IN %}<h2 style="margin: 0 0 8px 0;"><a href="{{ request.FKEY_IN.list_link }}">{{ request.FKEY_IN.module_name|capfirst }} list</a> / <a href="{{ request.FKEY_IN.item_link }}">#{{ request.FKEY_IN.id }}: {{ request.FKEY_IN.item }}</a></h2>{% endif %}
+{% if request.FKEY_LIST %}<h2 style="margin: 0 0 8px 0;"><a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.module_name|capfirst }} list</a> / <a href="{{ request.FKEY_LIST.item_link }}">#{{ request.FKEY_LIST.id }}: {{ request.FKEY_LIST.item }}</a></h2>{% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-  {% if request.FKEY_IN %}
+  {% if request.FKEY_LIST %}
   <a href="../../../../../">{% trans 'Home' %}</a> &rsaquo;
   <a href="../../../../">{{ app_label|capfirst }}</a> &rsaquo;
   <a href="../../../">{{ module_name }}</a> &rsaquo;
-  <a href="../../">{{ module_name }} in {{ request.FKEY_IN.module_name|capfirst }} #{{ request.FKEY_IN.id }}</a> &rsaquo;
+  <a href="../../">{{ module_name }} in {{ request.FKEY_LIST.module_name|capfirst }} #{{ request.FKEY_LIST.id }}</a> &rsaquo;
   <a href="../">{{ object|truncatewords:"18" }}</a> &rsaquo;
   {% trans 'History' %}
   {% else %}
