--- a/sakkada/admin/fkey_list/_install/templates/admin/app_name/change_list.html
+++ b/sakkada/admin/fkey_list/_install/templates/admin/app_name/change_list.html
@@ -1,6 +1,5 @@
 {% extends "admin/change_list.html" %}
-{% load adminmedia admin_list i18n %}
-{% load url from future %}
+{% load i18n %}{% load url from future %}
 
 {% block content_title %}
 {{ block.super }}
