--- a/sakkada/admin/fkey_list/_install/templates/admin/app_name/change_form.html
+++ b/sakkada/admin/fkey_list/_install/templates/admin/app_name/change_form.html
@@ -1,38 +1,51 @@
 {% extends "admin/change_form.html" %}
 {% load i18n admin_urls %}
 
+{% block extrahead %}{{ block.super }}
+<script type="text/javascript">
+(function($) {
+    $(document).ready(function($) {
+        // fkey list urls replacing
+        var datatag = $('#fkeylist-data-container');
+        if (datatag.length) {
+            // delete link replace (at this moment this is the most easy,
+            // replacing it from backend required creating custom template-tag
+            // and custom template for it)
+            $('a.deletelink').attr('href', datatag.data('url-delete-fkeylist'));
+            // history link replace (it can be also repalced in object-tools-items)
+            $('a.historylink').attr('href', datatag.data('url-history-fkeylist'));
+        }
+    });
+})(django.jQuery);
+</script>
+{% endblock %}
+
+{% block breadcrumbs %}
+{% if not is_popup %}
+<div class="breadcrumbs">
+    <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+    &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ app_label|capfirst|escape }}</a>
+    &rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
+    {% if request.FKEY_LIST %}
+    &rsaquo; {% if has_change_permission %}<a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}{% endif %}
+    {% endif %}
+    &rsaquo; {% if add %}{% trans 'Add' %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+</div>
+{% endif %}
+{% endblock %}
+
 {% block content_title %}
 {{ block.super }}
 {% if request.FKEY_LIST %}<h2 style="margin: 0 0 8px 0;"><a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_name|capfirst }} list</a> / <a href="{{ request.FKEY_LIST.item_link }}">#{{ request.FKEY_LIST.id }}: {{ request.FKEY_LIST.item }}</a></h2>{% endif %}
 {% endblock %}
 
-{% block object-tools-items %}
-{% if request.FKEY_LIST %}
-  <li>
-    {% url request.FKEY_LIST.link_name.history_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as history_url %}
-    <a href="{% add_preserved_filters history_url %}" class="historylink">{% trans "History" %}</a>
-  </li>
-  {% if has_absolute_url %}<li><a href="{% url 'admin:view_on_site' content_type_id original.pk %}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
-{% else %}
-  {{ block.super }}
-{% endif %}
-{% endblock %}
-
-{% block breadcrumbs %}
-{% if not is_popup %}
-  <div class="breadcrumbs">
-    {% if request.FKEY_LIST %}
-    <a href="../../../../">{% trans "Home" %}</a> &rsaquo;
-    <a href="../../../">{{ app_label|capfirst|escape }}</a> &rsaquo;
-    {% if has_change_permission %}<a href="../../">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %} &rsaquo;
-    {% if has_change_permission %}<a href="../">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}{% endif %} &rsaquo;
-    {% if add %}{% trans "Add" %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
-    {% else%}
-    <a href="../../../">{% trans "Home" %}</a> &rsaquo;
-    <a href="../../">{{ app_label|capfirst|escape }}</a> &rsaquo;
-    {% if has_change_permission %}<a href="../">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %} &rsaquo;
-    {% if add %}{% trans "Add" %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
-    {% endif %}
-  </div>
-{% endif %}
+{% block footer %}
+{{ block.super }}
+{% if request.FKEY_LIST %}{% spaceless %}
+{% url request.FKEY_LIST.link_name.delete_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as delete_fkeylist_url %}
+{% url request.FKEY_LIST.link_name.history_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as history_fkeylist_url %}
+<div data-url-delete-fkeylist="{% add_preserved_filters delete_fkeylist_url %}"
+     data-url-history-fkeylist="{% add_preserved_filters history_fkeylist_url %}"
+     id="fkeylist-data-container" style="display: none;"></div>
+{% endspaceless %}{% endif %}
 {% endblock %}
