--- a/sakkada/admin/fkey_list/_install/templates/admin/app_name/delete_selected_confirmation.html
+++ b/sakkada/admin/fkey_list/_install/templates/admin/app_name/delete_selected_confirmation.html
@@ -1,24 +1,19 @@
 {% extends "admin/delete_selected_confirmation.html" %}
-{% load i18n %}
+{% load i18n admin_urls %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+    &rsaquo; <a href="{% url 'admin:app_list' app_label=app_label %}">{{ app_label|capfirst|escape }}</a>
+    &rsaquo; <a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>
+    {% if request.FKEY_LIST %}
+    &rsaquo; <a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}</a>
+    {% endif %}
+    &rsaquo; {% trans 'Delete multiple objects' %}
+</div>
+{% endblock %}
 
 {% block content_title %}
 {{ block.super }}
 {% if request.FKEY_LIST %}<h2 style="margin: 0 0 8px 0;"><a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_name|capfirst }} list</a> / <a href="{{ request.FKEY_LIST.item_link }}">#{{ request.FKEY_LIST.id }}: {{ request.FKEY_LIST.item }}</a></h2>{% endif %}
-{% endblock %}
-
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-  {% if request.FKEY_LIST %}
-  <a href="../../../">{% trans "Home" %}</a> &rsaquo;
-  <a href="../../">{{ app_label|capfirst }}</a> &rsaquo;
-  <a href="../">{{ opts.verbose_name_plural|capfirst }}</a> &rsaquo;
-  <a href="./">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}</a> &rsaquo;
-  {% trans 'Delete multiple objects' %}
-  {% else %}
-  <a href="../../">{% trans "Home" %}</a> &rsaquo;
-  <a href="../">{{ app_label|capfirst }}</a> &rsaquo;
-  <a href="./">{{ opts.verbose_name_plural|capfirst }}</a> &rsaquo;
-  {% trans 'Delete multiple objects' %}
-  {% endif %}
-</div>
 {% endblock %}
