--- a/sakkada/admin/fkey_list/templates/admin/fkey_list/change_form.html
+++ b/sakkada/admin/fkey_list/templates/admin/fkey_list/change_form.html
@@ -2,52 +2,48 @@
 {% load i18n admin_urls %}
 
 {% block extrahead %}{{ block.super }}
+{% if request.FKEY_LIST %}
 <script type="text/javascript">
 (function($) {
-    $(document).ready(function($) {
-        // fkey list urls replacing
-        var datatag = $('#fkeylist-data-container');
-        if (datatag.length) {
-            // delete link replace (at this moment this is the most easy,
-            // replacing it from backend required creating custom template-tag
-            // and custom template for it)
-            $('a.deletelink').attr('href', datatag.data('url-delete-fkeylist'));
-            // history link replace (it can be also replaced in object-tools-items)
-            $('a.historylink').attr('href', datatag.data('url-history-fkeylist'));
-        }
-    });
+  $(document).ready(function($) {
+    {% url request.FKEY_LIST.link_name.delete_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as delete_fkeylist_url %}
+    {% url request.FKEY_LIST.link_name.history_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as history_fkeylist_url %}
+    // fkey list urls replacing
+    var url_delete="{% add_preserved_filters delete_fkeylist_url %}";
+    var url_history="{% add_preserved_filters history_fkeylist_url %}";
+    if (url_delete && url_history) {
+      // delete link replace (at this moment this is the most easy,
+      // replacing it from backend required creating custom template-tag
+      // and custom template for it)
+      $('a.deletelink').attr('href', url_delete);
+      // history link replace (it can be also replaced in object-tools-items)
+      $('a.historylink').attr('href', url_history);
+    }
+  });
 })(django.jQuery);
 </script>
+{% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
 {% if not is_popup %}
 <div class="breadcrumbs">
-    <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
-    &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
-    &rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
-    {% if request.FKEY_LIST %}
-    &rsaquo; {% if has_change_permission %}<a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_name|capfirst }} #{{ request.FKEY_LIST.id }}{% endif %}
-    {% endif %}
-    &rsaquo; {% if add %}{% trans 'Add' %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+  <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+  &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
+  &rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
+  {% if request.FKEY_LIST %}
+  &rsaquo; {% if has_change_permission %}<a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»{% endif %}
+  {% endif %}
+  &rsaquo; {% if add %}{% trans 'Add' %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
 </div>
 {% endif %}
 {% endblock %}
 
 {% block content_title %}
-{{ block.super }}
-{% if request.FKEY_LIST %}<h2 style="margin: 0 0 8px 0;">
-    <a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_name|capfirst }} list</a> / <a href="{{ request.FKEY_LIST.item_link }}">#{{ request.FKEY_LIST.id }}: {{ request.FKEY_LIST.item }}</a>
+{% if request.FKEY_LIST %}<h2 style="font-weight: 300; font-size: 18px; margin: 0 0 12px 0;">
+  All <a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_opts.verbose_name_plural|capfirst }}</a>
+  / <a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }}</a>
+  in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} <span style="font-weight: 400;">«</span><a href="{{ request.FKEY_LIST.item_link }}">{{ request.FKEY_LIST.item }}</a><span style="font-weight: 400;">»</span>
 </h2>{% endif %}
-{% endblock %}
-
-{% block footer %}
 {{ block.super }}
-{% if request.FKEY_LIST %}{% spaceless %}
-{% url request.FKEY_LIST.link_name.delete_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as delete_fkeylist_url %}
-{% url request.FKEY_LIST.link_name.history_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote original.pk|admin_urlquote as history_fkeylist_url %}
-<div data-url-delete-fkeylist="{% add_preserved_filters delete_fkeylist_url %}"
-     data-url-history-fkeylist="{% add_preserved_filters history_fkeylist_url %}"
-     id="fkeylist-data-container" style="display: none;"></div>
-{% endspaceless %}{% endif %}
 {% endblock %}
