Added markdown model and form fields.

--- a/sakkada/admin/editors/markdown/static/admin/markdown/markdown_editor.css
+++ b/sakkada/admin/editors/markdown/static/admin/markdown/markdown_editor.css
@@ -20,3 +20,11 @@
   padding: 0;
   margin: 0;
 }
+
+/* django admin fixes */
+form .aligned .editor-markdown-preview ul {
+  margin-left: 1.5em;
+}
+form .aligned .editor-markdown-preview ul li {
+  list-style-type: unset;
+}
