--- a/sakkada/admin/fkey_list/templates/admin/fkey_list/change_form.html
+++ b/sakkada/admin/fkey_list/templates/admin/fkey_list/change_form.html
@@ -30,17 +30,18 @@
 <div class="breadcrumbs">
   <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
   &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
-  &rsaquo; {% if has_change_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
+  &rsaquo; {% if has_view_permission %}<a href="{% url opts|admin_urlname:'changelist' %}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
   {% if request.FKEY_LIST %}
-  &rsaquo; {% if has_change_permission %}<a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»{% endif %}
+  &rsaquo; {% if has_view_permission %}<a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»</a>{% else %}{{ opts.verbose_name_plural|capfirst }} in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} #{{ request.FKEY_LIST.id }} «{{ request.FKEY_LIST.item }}»{% endif %}
   {% endif %}
-  &rsaquo; {% if add %}{% trans 'Add' %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+  &rsaquo; {% if add %}{% blocktrans with name=opts.verbose_name %}Add {{ name }}{% endblocktrans %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
 </div>
 {% endif %}
 {% endblock %}
 
 {% block content_title %}
 {% if request.FKEY_LIST %}<h2 style="font-weight: 300; font-size: 18px; margin: 0 0 12px 0;">
+  {% for link in request.FKEY_LIST.root_link %}{{ link }} /{% endfor %}
   All <a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_opts.verbose_name_plural|capfirst }}</a>
   / <a href="{% url request.FKEY_LIST.link_name.changelist_fkeylist request.FKEY_LIST.fkey_name request.FKEY_LIST.id|admin_urlquote %}">{{ opts.verbose_name_plural|capfirst }}</a>
   in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} <span style="font-weight: 400;">«</span><a href="{{ request.FKEY_LIST.item_link }}">{{ request.FKEY_LIST.item }}</a><span style="font-weight: 400;">»</span>
