--- a/sakkada/admin/fkey_list/templates/admin/fkey_list/change_list.html
+++ b/sakkada/admin/fkey_list/templates/admin/fkey_list/change_list.html
@@ -18,6 +18,7 @@
 
 {% block content_title %}
 {% if request.FKEY_LIST %}<h2 style="font-weight: 300; font-size: 18px; margin: 0 0 12px 0;">
+  {% for link in request.FKEY_LIST.root_link %}{{ link }} /{% endfor %}
   All <a href="{{ request.FKEY_LIST.list_link }}">{{ request.FKEY_LIST.fkey_opts.verbose_name_plural|capfirst }}</a>
   / {{ opts.verbose_name_plural|capfirst }}
   in {{ request.FKEY_LIST.fkey_opts.verbose_name|capfirst }} <span style="font-weight: 400;">«</span><a href="{{ request.FKEY_LIST.item_link }}">{{ request.FKEY_LIST.item }}</a><span style="font-weight: 400;">»</span>
