--- a/sakkada/admin/tree_list/templates/admin/tree_list/change_list.html
+++ b/sakkada/admin/tree_list/templates/admin/tree_list/change_list.html
@@ -1,9 +1,7 @@
 {% extends tree_list_parent_template|default:"admin/change_list.html" %}
 {% load i18n %}
 
-
-{% block extrahead %}
-{{ block.super }}
+{% block extrahead %}{{ block.super }}
 <script type="text/javascript">
 (function($) {
   // get current state of the tree
@@ -11,7 +9,6 @@
 })(django.jQuery);
 </script>
 {% endblock %}
-
 
 {% block object-tools-items %}
 <li>
