--- a/sakkada/admin/ajax_list/templates/admin/ajax_list/change_list.html
+++ b/sakkada/admin/ajax_list/templates/admin/ajax_list/change_list.html
@@ -1,15 +1,12 @@
 {% extends ajax_list_parent_template|default:"admin/change_list.html" %}
-
 {% load i18n %}
 
-{% block filters %}
+{% block object-tools-items %}
+<li>
+  <a id="ajaxlist-showhide-fields" href="#"
+     title="{% trans 'Press Ctrl+Shift+\ to show and hide ajax fields.' %}">
+    {% trans 'Show/Hide ajax fields' %}
+  </a>
+</li>
 {{ block.super }}
-{% if cl.has_filters %}
-<div id="ajaxlist-changelist-filter">
-<h2>{% trans 'Shortcuts' %}</h2>
-<ul class="changelist-filter-shortcuts">
-    <li><a id="ajaxlist-showhide-fields" href="#">{% trans 'Show/Hide ajax fields' %}</a></li>
-</ul>
-</div>
-{% endif %}
 {% endblock %}
